added the loading screen and changed the set timeout to 3 seconds for a more dramatic loading effect

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,11 @@ body {
     margin:auto ;
     display: flex;
     justify-content: center;
+
+}
+
+.movie-header{
+    text-align: center;
 }
 
 /* Style the summary container */
