--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
     background-color: white;
-    font-family: 'Libre Franklin', sans-serif;
+    font-family: 'League Gothic', sans-serif;
 }
 
 /* Add this CSS code to your styles.css file */
@@ -8,7 +8,7 @@ body {
 /*Style for the search functions*/
 /* Add this to your existing CSS file */
 .search-container {
-    margin-top: 20px;
+    /*margin-top: 10px;*/
     display: flex;
     align-items: center;
     justify-content: right;
@@ -25,9 +25,7 @@ body {
     border-radius: 50%; /* Make the dots circular */
     z-index: -1;
 }
-.header-center{
-    text-align: center;
-}
+
 .search-results-popup {
     display: none;
     position: fixed;
@@ -74,6 +72,7 @@ body {
 
 .movie-header{
     text-align: center;
+    /*font-size: 64px;*/
 }
 
 /* Style the summary container */
